<RelativeLayout
    android:id="@+id/actMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lblTitleText"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/lblSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/lblSubTitleText"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/txtA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblSubTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/txtAHint"
        android:inputType="numberSigned|numberDecimal"/>

    <EditText
        android:id="@+id/txtB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtA"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/txtBHint"
        android:inputType="numberSigned|numberDecimal"/>

    <EditText
        android:id="@+id/txtC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtB"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/txtCHint"
        android:inputType="numberSigned|numberDecimal"/>

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layButtons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/lblResultadoText"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:id="@+id/layButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtC"
        android:layout_alignLeft="@+id/txtC"
        android:layout_alignRight="@+id/txtC"
        android:layout_alignStart="@+id/txtC"
        android:layout_below="@+id/txtC"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCalcularText"/>

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnLimparText"/>


    </LinearLayout>

</RelativeLayout>
